tdf#162507 sw floattable: fix not wanted join of two different split anchors

Open the bugdoc, go to the end of the "Cannot press Delete here"
paragraph, press delete, layout hangs.

The trouble seems to be that this creates a doc model where multiple
multi-page floating tables are anchored to the same paragraph, which is
not something the layout supports. We explicitly avoid this at import
time from DOCX since commit 01ad8ec4bb5425446e95dbada81de435646824b4 (sw
floattable: fix lost tables around a floating table from DOCX,
2023-06-05), but there was no mechanism to prevent the UI creating the
same unsupported doc model.

Fix the problem by extending SwWrtShell::DelRight() to prevent joining 2
paragraphs in the unwanted case, interesting Word doesn't allow deleting
at the end of that paragraph, either.

Regression from commit 693ad3aadbf84afa750af73c330fe7e09b38a2e7
(tdf#120262 sw floattable, legacy: go outside body only for page frame
vert pos, 2023-07-31), which restricted the amount of cases where some
weird legacy behavior was performed, so good to keep that side as-is.

Change-Id: I4d8a6702d8ac1689690fa464014c99fcd5ef7bd2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172780
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins